# station_data

./: Dados_Pacote.txt  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
AnaliseJupyter/: AnaliseExploratoria.ipynb
analisejupyter/: Analise-Exploratoria-de-Dados-Exemplo.ipynb  AnaliseExploratoria.ipynb  AnaliseExploratoria2.ipynb
compare_2_station_soil/: RegressaoClima.ipynb  app.py
sensor_data/datacapture/: datacapture.ino
sensor_data/datacapture/datacapture_ThingSpeak.ino/: datacapture_ThingSpeak.ino.ino
sensor_data/esp8266wifi/: esp8266wifi.ino
src/station_data/: main.py
