[project]
name = "station_data"
version = "0.1.0"
authors = [
  { name="ROGERIO P. DOS SANTOS", email="rogerio.dosantos@ifpr.edu.br" },
]
description = "This package aims to carry out a pre-processing of conventional weather stations"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"